--- a/GetMeHome/app/src/main/AndroidManifest.xml
+++ b/GetMeHome/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".Direction" />
-
+        <activity android:name=".Resending"></activity>
     </application>
 
 </manifest>
